Fixed issue causing horizonal scrolling on mobile and tablet

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,11 @@
 
 body {
   font-family: var(--font-major-mono);
+  overflow-x: hidden; /* Prevent horizontal scrolling */
+}
+
+html {
+  overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
 .progress-bar {
